feat: add bluetooth summaries

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -14,6 +14,10 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 # Make Bluetooth stronger
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
+# Show both sides battery percentage in Bluetooth
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+
 # Disable external power when not connected to USB
 # CONFIG_ZMK_EXT_POWER_USB_ONLY=y
 
