--- a/config/corne.conf
+++ b/config/corne.conf
@@ -35,14 +35,14 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 ## RGB Underglow
 
 # Uncomment the following lines to enable the Corne RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
+# CONFIG_ZMK_RGB_UNDERGLOW=y
+# CONFIG_WS2812_STRIP=y
 
 # 0	Solid color    1 Breathe     2	Spectrum     3	Swirl
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=0
 
 # Turn off RGB underglow when keyboard goes into idle state
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
+# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
 
 # # Hue step in degrees (0-359) used by RGB actions default 10
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
@@ -78,13 +78,13 @@ CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
 
 # ######################################################
 ## OLED Display
-# CONFIG_ZMK_DISPLAY=y
-# CONFIG_ZMK_EXT_POWER=y
-# CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
-# CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-# CONFIG_ZMK_WIDGET_WPM_STATUS=y
-# CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-# CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_EXT_POWER=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
 
 # Uncomment these two lines to add support for encoders
