docs: add note for issues with seeing battery on windows config

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -17,6 +17,8 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # Show both sides battery percentage in Bluetooth
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+# Force windows machines to show power level that are having trouble doing so
+# CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
 # Disable external power when not connected to USB
 # CONFIG_ZMK_EXT_POWER_USB_ONLY=y
