--- a/config/corne.conf
+++ b/config/corne.conf
@@ -20,6 +20,10 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 # Force windows machines to show power level that are having trouble doing so
 # CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
+# Enable up to 10 different bluetooth profiles
+CONFIG_BT_MAX_CONN=11
+CONFIG_BT_MAX_PAIRED=11
+
 # Disable external power when not connected to USB
 # CONFIG_ZMK_EXT_POWER_USB_ONLY=y
 
