--- a/config/corne.conf
+++ b/config/corne.conf
@@ -7,9 +7,11 @@
 CONFIG_ZMK_KEYBOARD_NAME="zange-corne"
 
 ### Power
+# In the deep sleep state, the keyboard additionally disconnects from Bluetooth and any external power output is disabled. This state uses very little power, but it may take a few seconds to reconnect after waking.
 CONFIG_ZMK_SLEEP=y # Enable deep sleep support
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
-# CONFIG_ZMK_IDLE_TIMEOUT=120000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000 # deep sleep after 15 minutes
+# In the idle state, peripherals such as displays and lighting are disabled, but the keyboard remains connected to Bluetooth so it can immediately respond when you press a key.
+CONFIG_ZMK_IDLE_TIMEOUT=30000 # idle after 30 seconds
 
 # Make Bluetooth stronger
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
@@ -92,6 +94,8 @@ CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 # CONFIG_ZMK_WIDGET_WPM_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+# show black on white
+CONFIG_ZMK_DISPLAY_INVERT=y
 
 
 # Uncomment these two lines to add support for encoders
