--- a/config/corne.conf
+++ b/config/corne.conf
@@ -26,9 +26,6 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_BT_MAX_CONN=10
 CONFIG_BT_MAX_PAIRED=10
 
-# Disable external power when not connected to USB
-# CONFIG_ZMK_EXT_POWER_USB_ONLY=y
-
 
 
 # ######################################################
@@ -88,7 +85,9 @@ CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
 ## OLED Display
 ## https://zmk.dev/docs/config/displays#kconfig
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_EXT_POWER=y
+#CONFIG_ZMK_EXT_POWER=y
+# Disable external power when not connected to USB
+# CONFIG_ZMK_EXT_POWER_USB_ONLY=y
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 # CONFIG_ZMK_WIDGET_WPM_STATUS=y
