refactor: cleanup conf file

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,102 +1,50 @@
 # ######################################################
 ## General
-
-# Turn on logging, and set ZMK logging to debug output
-# CONFIG_ZMK_USB_LOGGING=y
+# ######################################################
 # Change board name
 CONFIG_ZMK_KEYBOARD_NAME="zange-corne"
 
-### Power
+# ######################################################
+## Power
+# ######################################################
 # In the deep sleep state, the keyboard additionally disconnects from Bluetooth and any external power output is disabled. This state uses very little power, but it may take a few seconds to reconnect after waking.
-CONFIG_ZMK_SLEEP=y # Enable deep sleep support
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000 # deep sleep after 15 minutes
 # In the idle state, peripherals such as displays and lighting are disabled, but the keyboard remains connected to Bluetooth so it can immediately respond when you press a key.
-CONFIG_ZMK_IDLE_TIMEOUT=30000 # idle after 30 seconds
 
-# Make Bluetooth stronger
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
-# Show both sides battery percentage in Bluetooth
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
-# Force windows machines to show power level that are having trouble doing so
-# CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
-
-# Enable up to 9 different bluetooth profiles
-CONFIG_BT_MAX_CONN=10
-CONFIG_BT_MAX_PAIRED=10
-
-
-
-# ######################################################
-## Mouse
-
-# Turn on mouse
-# CONFIG_ZMK_MOUSE=y
-
-
-
-# ######################################################
-## RGB Underglow
-
-# Uncomment the following lines to enable the Corne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
-
-# 0	Solid color    1 Breathe     2	Spectrum     3	Swirl
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=0
-
-# Turn off RGB underglow when keyboard goes into idle state
-# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
-
-# # Hue step in degrees (0-359) used by RGB actions default 10
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
-
-# # Brightness step in percent used by RGB actions default 10
-# CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=2
-# CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=10
-# CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=240
-# CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=5
-# CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=10
-# CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=2
-# CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5
-# CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=15
+# Enable deep sleep support
+CONFIG_ZMK_SLEEP=y
+# deep sleep after 15 minutes
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+# idle after 30 seconds
+CONFIG_ZMK_IDLE_TIMEOUT=30000
 
 # Uncomment the line below to disable external power toggling by the underglow.
 # By default toggling the underglow on and off also toggles external power
 # on and off. This also causes the display to turn off.
 # CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
-
-
 # ######################################################
-## RGB Backlight
-## ZMK doesn't support per-key backlighting. The only lighting code that works with RGB LEDs is the underglow code, hence the suggestion to add your backlight LEDs to be part of underglow
-# CONFIG_ZMK_BACKLIGHT=y
-# CONFIG_LED_GPIO=y
-# CONFIG_ZMK_BACKLIGHT_BRT_STEP=20
-# CONFIG_ZMK_BACKLIGHT_BRT_START=40
-# CONFIG_ZMK_BACKLIGHT_ON_START=y
-# CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
-# CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
-
+## Bluetooth
+# ######################################################
+# Show both sides battery percentage in Bluetooth
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+# Force windows machines to show power level that are having trouble doing so
+# CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+# Make Bluetooth stronger
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# Enable up to 9 different bluetooth profiles
+CONFIG_BT_MAX_CONN=10
+CONFIG_BT_MAX_PAIRED=10
 
 # ######################################################
 ## OLED Display
-## https://zmk.dev/docs/config/displays#kconfig
+# ######################################################
 CONFIG_ZMK_DISPLAY=y
-#CONFIG_ZMK_EXT_POWER=y
-# Disable external power when not connected to USB
-# CONFIG_ZMK_EXT_POWER_USB_ONLY=y
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-# CONFIG_ZMK_WIDGET_WPM_STATUS=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
 # show black on white
 CONFIG_ZMK_DISPLAY_INVERT=y
-
-
-# Uncomment these two lines to add support for encoders
-# CONFIG_EC11=y
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
