docs: add steps for getting oled back on after toggling off vcc output

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -33,6 +33,11 @@ CONFIG_BT_MAX_PAIRED=10
 
 # ######################################################
 ## OLED Display
+# For current issue with display not turning back on after turning external power off do the following:
+# https://github.com/zmkfirmware/zmk/issues/674
+# 1. Turn VCC on (EP_ON is the most reliable)
+# 2. Wait 60s for the setting to write to flash
+# 3. Power cycle or reset the board by pressing the reset button once.
 # ######################################################
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
