--- a/build.yaml
+++ b/build.yaml
@@ -20,19 +20,15 @@
 include:
   - board: nice_nano_v2
     shield: corne_left
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=mawon
-    artifact-name: mawon_corne_left
   - board: nice_nano_v2
     shield: corne_right
-    artifact-name: mawon_corne_right
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=mawon
   - board: nice_nano_v2
     shield: settings_reset
   - board: nice_nano_v2
     shield: corne_left
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=noir -DCONFIG_ZMK_RGB_UNDERGLOW=y
-    artifact-name: noir_corne_left
+    cmake-args: -DCONFIG_ZMK_RGB_UNDERGLOW=y
+    artifact-name: corne_with_leds
   - board: nice_nano_v2
     shield: corne_right
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=noir -DCONFIG_ZMK_RGB_UNDERGLOW=y
-    artifact-name: noir_corne_right
+    cmake-args: -DCONFIG_ZMK_RGB_UNDERGLOW=y
+    artifact-name: corne_with_leds
