--- a/build.yaml
+++ b/build.yaml
@@ -27,8 +27,8 @@ include:
   - board: nice_nano_v2
     shield: corne_left
     cmake-args: -DCONFIG_ZMK_RGB_UNDERGLOW=y
-    artifact-name: corne_with_leds
+    artifact-name: corne_left_with_leds
   - board: nice_nano_v2
     shield: corne_right
     cmake-args: -DCONFIG_ZMK_RGB_UNDERGLOW=y
-    artifact-name: corne_with_leds
+    artifact-name: corne_right_with_leds
