--- a/build.yaml
+++ b/build.yaml
@@ -26,9 +26,9 @@ include:
     shield: settings_reset
   - board: nice_nano_v2
     shield: corne_left
-    cmake-args: -DCONFIG_ZMK_RGB_UNDERGLOW=y
+    cmake-args: -DCONFIG_ZMK_RGB_UNDERGLOW=y -DCONFIG_WS2812_STRIP=y
     artifact-name: corne_left_with_leds
   - board: nice_nano_v2
     shield: corne_right
-    cmake-args: -DCONFIG_ZMK_RGB_UNDERGLOW=y
+    cmake-args: -DCONFIG_ZMK_RGB_UNDERGLOW=y -DCONFIG_WS2812_STRIP=y
     artifact-name: corne_right_with_leds
