--- a/config/corne.conf
+++ b/config/corne.conf
@@ -45,3 +45,7 @@ CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
+
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
