--- a/build.yaml
+++ b/build.yaml
@@ -20,7 +20,17 @@
 include:
   - board: nice_nano_v2
     shield: corne_left
+    artifact-name: mawon_corne_left
   - board: nice_nano_v2
     shield: corne_right
+    artifact-name: mawon_corne_right
   - board: nice_nano_v2
     shield: settings_reset
+  - board: nice_nano_v2
+    shield: corne_left
+    cmake-args: -DZMK_CONFIG=../../config/corne-noir.conf
+    artifact-name: noir_corne_left
+  - board: nice_nano_v2
+    shield: corne_right
+    cmake-args: -DZMK_CONFIG=../../config/corne-noir.conf
+    artifact-name: noir_corne_right
