fix: shorten bluetooth names

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,7 +2,7 @@
 ## Board Specific
 # ######################################################
 # Change board name
-CONFIG_ZMK_KEYBOARD_NAME="zange-corne-mawon"
+CONFIG_ZMK_KEYBOARD_NAME="corne-mawon"
 
 # ######################################################
 ## Power
