--- a/config/corne-noir.conf
+++ b/config/corne-noir.conf
@@ -2,7 +2,7 @@
 ## Board Specific
 # ######################################################
 # Change board name
-CONFIG_ZMK_KEYBOARD_NAME="zange-corne-noir"
+CONFIG_ZMK_KEYBOARD_NAME="corne-noir"
 
 # Allow LEDs
 CONFIG_ZMK_RGB_UNDERGLOW=y
