--- a/build.yaml
+++ b/build.yaml
@@ -29,9 +29,9 @@ include:
     shield: settings_reset
   - board: nice_nano_v2
     shield: corne_left
-    cmake-args: -DZMK_CONFIG=../../config/corne-noir.conf
+    cmake-args: -DZMK_CONFIG=../../config/corne-noir.conf -DKEYMAP_FILE=../../config/corne.keymap
     artifact-name: noir_corne_left
   - board: nice_nano_v2
     shield: corne_right
-    cmake-args: -DZMK_CONFIG=../../config/corne-noir.conf
+    cmake-args: -DZMK_CONFIG=../../config/corne-noir.conf -DKEYMAP_FILE=../../config/corne.keymap
     artifact-name: noir_corne_right
