--- a/build.yaml
+++ b/build.yaml
@@ -15,8 +15,7 @@
 #     shield: corne_left
 #     cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
 #     artifact-name: corne_left_with_logging
-# Reference for building multiple diff config keyboards:
-#   https://github.com/zmkfirmware/zmk/issues/1931
+#
 ---
 include:
   - board: nice_nano_v2
@@ -29,9 +28,9 @@ include:
     shield: settings_reset
   - board: nice_nano_v2
     shield: corne_left
-    cmake-args: -DZMK_CONFIG=../../config/noir/ -DKEYMAP_FILE=../../config/corne.keymap
+    cmake-args: '-DCONFIG_ZMK_KEYBOARD_NAME="noir"'
     artifact-name: noir_corne_left
   - board: nice_nano_v2
     shield: corne_right
-    cmake-args: -DZMK_CONFIG=../../config/noir/ -DKEYMAP_FILE=../../config/corne.keymap
+    cmake-args: '-DCONFIG_ZMK_KEYBOARD_NAME="noir"'
     artifact-name: noir_corne_right
