feat: try seperate config for noir

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,7 +2,11 @@
 ## Board Specific
 # ######################################################
 # Change board name
-CONFIG_ZMK_KEYBOARD_NAME="corne-mawon"
+CONFIG_ZMK_KEYBOARD_NAME="corne-noir"
+
+# Allow LEDs
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
 
 # ######################################################
 ## Power
