feat: add build for samurai keyboard

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,7 +2,7 @@
 ## Board Specific
 # ######################################################
 # Change board name
-CONFIG_ZMK_KEYBOARD_NAME="corne-noir"
+CONFIG_ZMK_KEYBOARD_NAME="corne-samurai"
 
 # Allow LEDs
 CONFIG_ZMK_RGB_UNDERGLOW=y
