--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,6 +4,10 @@
 # Change board name
 CONFIG_ZMK_KEYBOARD_NAME="corne-mawon"
 
+# Allow LEDs
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
+
 # ######################################################
 ## Power
 # ######################################################
