--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,8 +5,8 @@
 CONFIG_ZMK_KEYBOARD_NAME="corne-mawon"
 
 # Allow LEDs
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
+# CONFIG_ZMK_RGB_UNDERGLOW=y
+# CONFIG_WS2812_STRIP=y
 
 # ######################################################
 ## Power
