fix: turn off underglow being attached to external power to allow screen to work with oleds

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,8 +5,9 @@
 CONFIG_ZMK_KEYBOARD_NAME="corne-mawon"
 
 # Allow LEDs
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 # ######################################################
 ## Power
