--- a/config/corne.conf
+++ b/config/corne.conf
@@ -7,6 +7,7 @@ CONFIG_ZMK_KEYBOARD_NAME="corne-noir"
 # Allow LEDs
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 # ######################################################
 ## Power
