build: update keyboard name

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,7 +2,7 @@
 ## Board Specific
 # ######################################################
 # Change board name
-CONFIG_ZMK_KEYBOARD_NAME="corne-mawon-1"
+CONFIG_ZMK_KEYBOARD_NAME="corne-noir-1"
 
 # Allow LEDs
 CONFIG_ZMK_RGB_UNDERGLOW=y
