--- a/build.yaml
+++ b/build.yaml
@@ -20,9 +20,9 @@
 include:
   - board: nice_nano_v2
     shield: corne_left
-    artifact-name: mawon_corne_left
+    artifact-name: corne_left
   - board: nice_nano_v2
     shield: corne_right
-    artifact-name: mawon_corne_right
+    artifact-name: corne_right
   - board: nice_nano_v2
     shield: settings_reset
