refactor: remove rgb, bluetooth reporting, and rename name to frostbite

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,11 +2,11 @@
 ## Board Specific
 # ######################################################
 # Change board name
-CONFIG_ZMK_KEYBOARD_NAME="corne-noir-1"
+CONFIG_ZMK_KEYBOARD_NAME="frostbite"
 
 # Allow LEDs
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_WS2812_STRIP=n
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 # ######################################################
@@ -25,9 +25,10 @@ CONFIG_ZMK_IDLE_TIMEOUT=30000
 # ######################################################
 ## Bluetooth
 # ######################################################
+CONFIG_ZMK_BATTERY_REPORTING=n
 # Show both sides battery percentage in Bluetooth
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=n
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=n
 # Force windows machines to show power level that are having trouble doing so
 # CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 # Make Bluetooth stronger
