--- a/config/corne.conf
+++ b/config/corne.conf
@@ -26,13 +26,17 @@ CONFIG_ZMK_IDLE_TIMEOUT=30000
 ## Bluetooth
 # ######################################################
 CONFIG_ZMK_BATTERY_REPORTING=n
+
 # Show both sides battery percentage in Bluetooth
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=n
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=n
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=n
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=n
+
 # Force windows machines to show power level that are having trouble doing so
 # CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+
 # Make Bluetooth stronger
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
 # Enable up to 9 different bluetooth profiles
 CONFIG_BT_MAX_CONN=10
 CONFIG_BT_MAX_PAIRED=10
