fix: properly disable just reporting of battery to host machine

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -25,7 +25,8 @@ CONFIG_ZMK_IDLE_TIMEOUT=30000
 # ######################################################
 ## Bluetooth
 # ######################################################
-CONFIG_ZMK_BATTERY_REPORTING=n
+# Disable bluetooth reporting service
+CONFIG_BT_BAS=n
 
 # Show both sides battery percentage in Bluetooth
 # CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=n
