feat: add combo buttons for escape and capsword

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,7 +2,7 @@
 ## Board Specific
 # ######################################################
 # Change board name
-CONFIG_ZMK_KEYBOARD_NAME="frostbite"
+CONFIG_ZMK_KEYBOARD_NAME="oni"
 
 # Allow LEDs
 CONFIG_ZMK_RGB_UNDERGLOW=n
@@ -56,3 +56,5 @@ CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+# Reference for custom mods:
+# https://github.com/zmkfirmware/zmk/pull/1556/files
