--- a/config/corne.conf
+++ b/config/corne.conf
@@ -50,11 +50,11 @@ CONFIG_BT_MAX_PAIRED=10
 # 2. Wait 60s for the setting to write to flash
 # 3. Power cycle or reset the board by pressing the reset button once.
 # ######################################################
-CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
-CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-CONFIG_ZMK_WIDGET_WPM_STATUS=n
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+# CONFIG_ZMK_DISPLAY=y
+# CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+# CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+# CONFIG_ZMK_WIDGET_WPM_STATUS=n
+# CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+# CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 # Reference for custom mods:
 # https://github.com/zmkfirmware/zmk/pull/1556/files
