--- a/config/corne.conf
+++ b/config/corne.conf
@@ -50,6 +50,9 @@ CONFIG_BT_MAX_PAIRED=10
 # 2. Wait 60s for the setting to write to flash
 # 3. Power cycle or reset the board by pressing the reset button once.
 # ######################################################
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 # CONFIG_ZMK_DISPLAY=y
 # CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 # CONFIG_ZMK_WIDGET_LAYER_STATUS=y
