--- a/config/corne.conf
+++ b/config/corne.conf
@@ -58,6 +58,6 @@ CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 # CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 # CONFIG_ZMK_WIDGET_WPM_STATUS=n
 # CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-# CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 # Reference for custom mods:
 # https://github.com/zmkfirmware/zmk/pull/1556/files
