feat: disable deep sleep to use soft off instead

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,7 +2,7 @@
 ## Board Specific
 # ######################################################
 # Change board name
-CONFIG_ZMK_KEYBOARD_NAME="ben-10"
+CONFIG_ZMK_KEYBOARD_NAME="oni"
 
 # Allow LEDs
 CONFIG_ZMK_RGB_UNDERGLOW=n
@@ -16,11 +16,13 @@ CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 # In the idle state, peripherals such as displays and lighting are disabled, but the keyboard remains connected to Bluetooth so it can immediately respond when you press a key.
 
 # Enable deep sleep support
-CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SLEEP=n
 # deep sleep after 15 minutes
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 # idle after 30 seconds
 CONFIG_ZMK_IDLE_TIMEOUT=30000
+
+CONFIG_ZMK_PM_SOFT_OFF=y
 
 # ######################################################
 ## Bluetooth
