--- a/config/corne.conf
+++ b/config/corne.conf
@@ -16,9 +16,9 @@ CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 # In the idle state, peripherals such as displays and lighting are disabled, but the keyboard remains connected to Bluetooth so it can immediately respond when you press a key.
 
 # Enable deep sleep support
-CONFIG_ZMK_SLEEP=n
+# CONFIG_ZMK_SLEEP=n
 # deep sleep after 15 minutes
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 # idle after 30 seconds
 CONFIG_ZMK_IDLE_TIMEOUT=30000
 
