--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,7 +2,7 @@
 ## Board Specific
 # ######################################################
 # Change board name
-CONFIG_ZMK_KEYBOARD_NAME="ben-10"
+CONFIG_ZMK_KEYBOARD_NAME="samurai"
 
 # Allow LEDs
 CONFIG_ZMK_RGB_UNDERGLOW=n
@@ -51,10 +51,10 @@ CONFIG_BT_MAX_PAIRED=10
 # 3. Power cycle or reset the board by pressing the reset button once.
 # ######################################################
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
-CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-CONFIG_ZMK_WIDGET_WPM_STATUS=n
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+# CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+# CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+# CONFIG_ZMK_WIDGET_WPM_STATUS=n
+# CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+# CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 # Reference for custom mods:
 # https://github.com/zmkfirmware/zmk/pull/1556/files
