feat: build for ben10

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,7 +2,7 @@
 ## Board Specific
 # ######################################################
 # Change board name
-CONFIG_ZMK_KEYBOARD_NAME="samurai"
+CONFIG_ZMK_KEYBOARD_NAME="ben-10"
 
 # Allow LEDs
 CONFIG_ZMK_RGB_UNDERGLOW=n
