--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,7 +2,8 @@
 ## Board Specific
 # ######################################################
 # Change board name
-CONFIG_ZMK_KEYBOARD_NAME="ben-10"
+# CONFIG_ZMK_KEYBOARD_NAME="ben-10"
+CONFIG_ZMK_KEYBOARD_NAME="oni"
 
 # Allow LEDs
 CONFIG_ZMK_RGB_UNDERGLOW=n
