build: build for samurai

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -3,7 +3,7 @@
 # ######################################################
 # Change board name
 # CONFIG_ZMK_KEYBOARD_NAME="ben-10"
-CONFIG_ZMK_KEYBOARD_NAME="oni"
+CONFIG_ZMK_KEYBOARD_NAME="samurai"
 
 # Allow LEDs
 CONFIG_ZMK_RGB_UNDERGLOW=n
