--- a/build.yaml
+++ b/build.yaml
@@ -25,4 +25,10 @@ include:
     shield: corne_right
     artifact-name: corne_right
   - board: nice_nano_v2
+    shield: cradio_left
+    artifact-name: cradio_left
+  - board: nice_nano_v2
+    shield: cradio_right
+    artifact-name: cradio_right
+  - board: nice_nano_v2
     shield: settings_reset
