--- a/config/corne.conf
+++ b/config/corne.conf
@@ -3,12 +3,12 @@
 # ######################################################
 # Change board name
 # CONFIG_ZMK_KEYBOARD_NAME="ben-10"
-CONFIG_ZMK_KEYBOARD_NAME="samurai"
+CONFIG_ZMK_KEYBOARD_NAME="tmnt"
 
 # Allow LEDs
-CONFIG_ZMK_RGB_UNDERGLOW=n
-CONFIG_WS2812_STRIP=n
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
 
 # ######################################################
 ## Power
