--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,64 +1,5 @@
 # ######################################################
 ## Board Specific
 # ######################################################
-# Change board name
-# CONFIG_ZMK_KEYBOARD_NAME="ben-10"
-CONFIG_ZMK_KEYBOARD_NAME="tmnt"
-
-# Allow LEDs
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
-
-# ######################################################
-## Power
-# ######################################################
-# In the deep sleep state, the keyboard additionally disconnects from Bluetooth and any external power output is disabled. This state uses very little power, but it may take a few seconds to reconnect after waking.
-# In the idle state, peripherals such as displays and lighting are disabled, but the keyboard remains connected to Bluetooth so it can immediately respond when you press a key.
-
-# Enable deep sleep support
-# CONFIG_ZMK_SLEEP=n
-# deep sleep after 15 minutes
-# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
-# idle after 30 seconds
-CONFIG_ZMK_IDLE_TIMEOUT=30000
-
-# ######################################################
-## Bluetooth
-# ######################################################
-# Disable bluetooth reporting service
-CONFIG_BT_BAS=n
-
-# Show both sides battery percentage in Bluetooth
-# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=n
-# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=n
-
-# Force windows machines to show power level that are having trouble doing so
-# CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
-
-# Make Bluetooth stronger
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
-# Enable up to 9 different bluetooth profiles
-CONFIG_BT_MAX_CONN=10
-CONFIG_BT_MAX_PAIRED=10
-
-# ######################################################
-## OLED Display
-# For current issue with display not turning back on after turning external power off do the following:
-# https://github.com/zmkfirmware/zmk/issues/674
-# 1. Turn VCC on (EP_ON is the most reliable)
-# 2. Wait 60s for the setting to write to flash
-# 3. Power cycle or reset the board by pressing the reset button once.
-# ######################################################
+CONFIG_ZMK_KEYBOARD_NAME="taro"
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
-CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
-CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
-# CONFIG_ZMK_DISPLAY=y
-# CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
-# CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-# CONFIG_ZMK_WIDGET_WPM_STATUS=n
-# CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-# Reference for custom mods:
-# https://github.com/zmkfirmware/zmk/pull/1556/files
