--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,3 +4,6 @@
 CONFIG_ZMK_KEYBOARD_NAME="taro"
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
+# Enable mouse
+CONFIG_ZMK_POINTING=y
