--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,6 +4,7 @@
 CONFIG_ZMK_KEYBOARD_NAME="taro"
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_DISPLAY_INVERT=y
 
 # Enable mouse
 CONFIG_ZMK_POINTING=y
